# dn42

./: .env.example  .gitignore  README.md  README.zh-TW.md  config.example.json  go.mod  pyproject.toml  requirements.txt  start.py
agent/: config.example.json  go.mod
agent/cmd/agent/: main.go
app/: main.py  node_ws.py
app/auth/: findnoc.py  service.py
app/bot/: main.py
app/db/: init_db.py  models.py
app/lg/: client.py  ratelimit.py  validation.py
app/peer/: config.py  deploy.py  queries.py  service.py  validation.py
app/static/: kioubit-auth-button.js  styles.css
app/templates/: error.html  lg.html  macros.html  peer_detail.html  portal.html  portal_new.html  telegram_auth.html
app/web/: __init__.py  admin.py  pages.py  portal.py
backend/: .env.example  pyproject.toml
backend/app/: agent_ws.py  config.py  main.py  node_ws.py
backend/app/api/: telegram.py
backend/app/auth/: findnoc.py  kioubit.py  service.py  session.py
backend/app/bot/: main.py
backend/app/db/: init_db.py  models.py
backend/app/lg/: client.py  ratelimit.py  summary.py  validation.py
backend/app/peer/: config.py  deploy.py  service.py  validation.py
backend/app/static/: app.js  styles.css
backend/app/templates/: admin.html  base.html  config.html  error.html  home.html  index.html  lg.html  login.html  peer_detail.html  portal.html  portal_confirm.html  portal_new.html  telegram_auth.html
backend/app/templates/admin/: agent_edit.html  agents.html  layout.html  lg_log.html  node_edit.html  nodes.html  overview.html  peer_edit.html  peer_status.html  peers.html  users.html
backend/app/web/: __init__.py  admin.py  deps.py  lg.py  pages.py  portal.py
backend/scripts/: migrate_to_uuid_nodes.py
cmd/node/: main.go
deploy/systemd/: dn42-autopeer-agent.service  dn42-autopeer-backend.service  dn42-autopeer-bot.service
docs/: agent-api.md  auth-flow.md  node-api.md
internal/api/: server.go
internal/backend/: client.go
internal/config/: config.go
internal/runner/: runner.go
(+9 files in other folders)
