[project]
name = "dn42-autopeer"
version = "0.1.0"
description = "Python control plane for dn42 autopeering, looking glass, WebUI, and Telegram bot."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7.0",
    "anyio>=4.0.0",
    "cryptography>=43.0.1",
    "fastapi>=0.111.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
# Developer tooling. Install with `pip install -e ".[dev]"`.
dev = [
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes (defaults), I: import sorting, UP: pyupgrade
# (modernize for the py311 target), B: flake8-bugbear (likely-bug patterns).
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom intentionally calls these in argument
# defaults (`db: Session = Depends(get_db)`, `x: str = Form(...)`), which is
# safe; tell bugbear not to flag them as B008.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Query",
]

[tool.ruff.lint.isort]
# Pin the local package so import grouping is deterministic regardless of the
# directory ruff is invoked from.
known-first-party = ["app"]
