[project]
name = "dn42-autopeer-backend"
version = "0.1.0"
description = "Python control plane for dn42 autopeering, looking glass, WebUI, and Telegram bot."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7.0",
    "cryptography>=43.0.1",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
